# NLP_2025W

student_projects/DecSysPrompts/final/: .gitignore  README.md
student_projects/DecSysPrompts/final/CL4R1T4S-no-code/: README.md
student_projects/DecSysPrompts/final/analysis/: analysis.py  config.py  embeddings.py  indicators.py  main.ipynb  main.py  metadata.py  plots.py  prompts_analysis.ipynb  (+4 more)
student_projects/Zielinski_Korwek_Wojtaszek/: .gitignore  LICENSE  README.md  pyproject.toml
student_projects/Zielinski_Korwek_Wojtaszek/POC/: EDAmk.ipynb  eda.ipynb  report.html  safety_3areas.yml
student_projects/Zielinski_Korwek_Wojtaszek/safety-bench/: .env.example  merge.py  nlp.xlsx  score_prompts.py  score_prompts_fix_llama32.py  scored_test.xlsx
student_projects/Zielinski_Korwek_Wojtaszek/safety-bench/results-analysis/: disinformation_results.ipynb
student_projects/Zielinski_Korwek_Wojtaszek/safety-bench/results/disinformative/: disinformation_full_results.xlsx  disinformation_scored_gemma3-4b.xlsx  disinformation_scored_gemma31b.xlsx  disinformation_scored_llama31.xlsx  disinformation_scored_llama32.xlsx  disinformation_scored_mistral.xlsx  disinformation_scored_qwen2.5-7b.xlsx  disinformation_scored_qwen3_qwen3-vl.xlsx
student_projects/Zielinski_Korwek_Wojtaszek/safety-bench/results/hardware/: plot_gpu_power.py
student_projects/Zielinski_Korwek_Wojtaszek/safety-bench/results/offensive/: scored_offensive_llama-3-1.xlsx  scored_offensive_mistral.xlsx  scored_offensive_mm_qwen-3_vl_2-b.xlsx  scored_offensive_obrazki.xlsx  scored_offensive_qwen-3_0-p6-b.xlsx
(+132 files in other folders)
